--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,15 +1,24 @@
 
 .sliderContainer{
 
-max-width: 100%;
-
-height: 600px;
-
-background-size: cover;
-
-}
-.sliderContainer img{
-    width: 100%;
-    height: 100%;
-    /* background-size: cover; */
-}
+    max-width: 100%;
+    
+    height: 600px;
+    
+    background-size: cover;
+    
+    }
+    .sliderContainer img{
+        width: 100%;
+        height: 100%;
+        /* background-size: cover; */
+    }
+    @media screen and (max-width: 475px){
+        .sliderContainer{
+      
+        
+          height: 250px;
+          width: 100%;
+        
+        }
+      }
